[package]
name = "ds210_finalproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.3"
csv = "1.3"
petgraph = "0.6.4"

[[bin]]
name = "load_embeddings"
path = "src/load_embeddings.rs"

[[bin]]
name = "calculate_metrics"
path = "src/calculate_metrics.rs"